// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package chronicle.api.remote.testutil;

option features.field_presence = IMPLICIT;
option java_multiple_files = true;
option java_package = "com.google.android.libraries.pcc.chronicle.api.remote.testutil";

message SimpleProtoMessage {
  double double_field = 1;
  float float_field = 2;
  int32 int_field = 3;
  uint32 unsigned_int_field = 4;
  sint32 signed_int_field = 5;
  fixed32 fixed_width_int_field = 6;
  sfixed32 signed_fixed_width_int_field = 7;
  int64 long_field = 8;
  uint64 unsigned_long_field = 9;
  sint64 signed_long_field = 10;
  fixed64 fixed_width_long_field = 11;
  sfixed64 signed_fixed_width_long_field = 12;
  bool bool_field = 13;
  string string_field = 14;
  bytes bytes_field = 15;
  SimpleEnum enum_field = 16;

  enum SimpleEnum {
    OPTION_ZERO = 0;
    OPTION_ONE = 1;
    OPTION_TWO = 2;
    OPTION_THREE = 3;
  }
}

message RepeatedProtoMessage {
  repeated int32 int_values = 1;
}

message TreeProtoMessage {
  int32 value = 1;
  repeated TreeProtoMessage children = 2;
}

message NestedProtoMessage {
  SimpleProtoMessage simple_message = 1;
  RepeatedProtoMessage repeated_message = 2;
  TreeProtoMessage tree_message = 3;
}
